[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/gray cat.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=3]
[ext_resource path="res://Materials/Shaders/Silluette.tres" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/use = false

[sub_resource type="CircleShape2D" id=1]
radius = 23.0

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GrayCat:material:shader_param/Use")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GrayCat:material:shader_param/Color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GrayCat:material:shader_param/use")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GrayCat:material:shader_param/color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("GrayCat:material:shader_param/use")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GrayCat:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )
speed = 25.0
friction = 0.1

[node name="GrayCat" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
offset = Vector2( 150, -20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="FeetParticles" type="Particles2D" parent="."]
position = Vector2( 1, 24 )
emitting = false
amount = 16
randomness = 1.0
local_coords = false

[node name="InventoryRotor" type="Node2D" parent="."]
rotation = 6.28319

[node name="Inventory" type="Node2D" parent="InventoryRotor"]
material = SubResource( 2 )
position = Vector2( 27, 0 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/hurt = SubResource( 5 )
